added enable-preview on gradle.task.bootRun